scss/pages/realisation/_works.scss
.page-realisations {
  background-color: $dark_grey;
}

.works {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  color: #fff;
  .works-img {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    overflow: scroll;
    opacity: 0;
    height: 100%;
    .inner-img {
      position: relative;
      z-index: 2;
      display: flex;
      justify-content: center;
      flex-direction: column;
      align-items: center;
      margin: 6rem 0;
      .thumbnail {
        width: 850px;
        height: 550px;
        position: relative;
        margin-bottom: 8rem;
        &:last-child {
          margin-bottom: 0;
        }
      }
    }
  }
  .container-canvas {
    z-index: 1;
    .wrapper-canvas {
      &.disabled-scroll {
        pointer-events: none !important;
      }
    }
  }
  .wrap-works {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
  }
  .wrap-infos {
    position: absolute;
    width: 100%;
    top: 20px;
    height: 145px;
    display: flex;
    align-items: center;
    z-index: 2;
    pointer-events: none;
    .info-work {
      position: absolute;
      text-transform: uppercase;
      overflow: hidden;
      opacity: 0;
      transition: opacity 0.3s ease-in-out;
      width: 100%;
      text-align: center;
      &.active {
        opacity: 1;
      }
      .work-link {
        font-size: 4rem;
        font-family: $font_gallient;
        display: inline-block;
        position: relative;
        z-index: 1;
        line-height: 1;
      }
    }
  }
  .wrap-number {
    top: 120px;
    right: 75px;
    z-index: 1;
    display: flex;
    align-items: center;
    line-height: 1;
    transform: rotate(90deg);
    overflow: hidden;
    position: absolute;
    pointer-events: none;
    .number-work {
      display: flex;
      align-items: center;
      position: relative;
      .number {
        font-size: 3rem;
        width: 61px;
        display: inline-block;
        text-align: right;
      }
      .separate {
        padding: 0 6px;
      }
    }
  }
  .wrap-progress {
    pointer-events: none;
    position: absolute;
    bottom: -5px;
    right: 25px;
    z-index: 1;
    width: 200px;
    height: 200px;
    .circle-text {
      fill: #fff;
      font-size: 1.1rem;
      text-transform: uppercase;
    }
  }
  .wrap-contact {
    position: absolute;
    z-index: 1;
    bottom: 40px;
    left: 65px;
  }
}

